<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"


    >
<!--
android:background="@color/material_dynamic_secondary90"
!-->
    <EditText
        android:id="@+id/searchid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_border"
        android:drawableRight="@drawable/ic_baseline_search_24"
        android:ems="10"
        android:hint="@string/Destination"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/ques1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/checkIn"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/checkInDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/jan"

            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="normal"
            />

        <EditText
            android:id="@+id/checkInDated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/day"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="normal"
            />

        <EditText
            android:id="@+id/checkInDatey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/year"

            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="normal"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/ques2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:text="@string/checkOut"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
 />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/checkOutDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:backgroundTint="@color/blue"
            android:text="@string/jan1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="normal"
            />
        <EditText
            android:id="@+id/checkOutDate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/month1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="normal"
            />
        <EditText
            android:id="@+id/checkOutDate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/year1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="normal"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/ques3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/room"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/a"
            android:textAlignment="center"
            android:textSize="20dp"
            android:background="@color/blue"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/ques6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num1"

            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="normal"
            />

        <Button
            android:id="@+id/sub1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="10dp"
            android:text="@string/minus"
            android:background="@color/blue"
            android:textSize="20dp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/ques4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/adult"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="@string/addd"
            android:textAlignment="center"
            android:background="@color/blue"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/ques7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/num2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="normal"

            />

        <Button
            android:id="@+id/sub2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginEnd="15dp"
            android:text="@string/subb"
            android:background="@color/blue"
            android:textSize="20dp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/ques5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/childern"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
 />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@color/blue"
            android:text="@string/add"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/ques8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/num3"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="normal"
            />

        <Button
            android:id="@+id/sub3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/sub"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundbouton"
            android:text="@string/apply"
            android:textAlignment="center"
            android:textSize="30dp"


            />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundbuton2"
            android:text="@string/cancle"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp"
            />
    </LinearLayout>

</LinearLayout>
</ScrollView>